--- a/subpages/contacts.html
+++ b/subpages/contacts.html
@@ -135,6 +135,24 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 wow fadeInUp">
+            <div class="member">
+              <img src="https://res.cloudinary.com/duz0m03mq/image/upload/w_1000,ar_1:1,c_fill,g_auto/v1558027166/Interface/afeedh.jpg" class="img-fluid" alt="" >
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Afeedh Shaji </h4>
+                  <span>Chief Technical Officer </span>
+                  <div class="social">
+                    <a href=""><i class="fa fa-phone"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
               <img src="https://res.cloudinary.com/duz0m03mq/image/upload/w_1000,ar_1:1,c_fill,g_auto/v1557764829/Interface/Aishwarya-_Treasurer_qwpk2w.jpg" class="img-fluid" alt="">
@@ -415,11 +433,9 @@
     <!--==========================
         LOADER
         ==========================-->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-          stroke="#F96D00" /></svg></div>
-    </div>
+        <div id="ftco-loader" class="show fullscreen" style="background: #121212">
+          <img src="assets/svg/bro_animated.svg" width="200px">
+        </div>
 
 
 
