added cto again

--- a/subpages/contacts.html
+++ b/subpages/contacts.html
@@ -434,7 +434,7 @@
         LOADER
         ==========================-->
         <div id="ftco-loader" class="show fullscreen" style="background: #121212">
-          <img src="assets/svg/bro_animated.svg" width="200px">
+          <img src="../assets/svg/bro_animated.svg" width="200px">
         </div>
 
 
