--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      <a class="nav-link js-scroll-trigger" href="index.html" ">Home</a>
+                      <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
                               </li>
-                        <li class=" nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about1" ">About</a>
+                        <li class= "nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about1">About</a>
                           </li>
                           <li class=" nav-item">
                             <a class="nav-link js-scroll-trigger" href="subpages/error404.html">Schedule</a>
                         </li>
                           <li class=" nav-item">
-                          <a class="nav-link js-scroll-trigger" href="#events-interface" ">Events</a>
+                          <a class="nav-link js-scroll-trigger" href="#events-interface" >Events</a>
                           </li>
                           <li class=" nav-item">
                             <a class="nav-link js-scroll-trigger" href="#speakers-interface">Speakers</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link js-scroll-trigger" href="#sponsors-interface" " >Sponsors</a>
+                      <a class="nav-link js-scroll-trigger" href="#sponsors-interface">Sponsors</a>
                           </li>
                           <li class=" nav-item">
                         <a class="nav-link js-scroll-trigger" href="#contact-interface">Contact</a>
